style: UI update & use Modal

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,33 @@
 .App {
 
-  .container {
+  .camigbobhj_btn {
+    text-align: center;
+    padding: 20px;
+  }
+
+  .gtdkxicism {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 20px;
+    padding-top: 50px;
+  }
+}
+
+.zrjfnchewm {
+
+  .yiydsdrnq {
+
+    .sngsycqtd {
+      margin: 12px 0;
+
+      .gulonzrnvp {
+        padding: 4px;
+      }
+    }
+
+    .bydbefjekd {
+      text-align: center;
+    }
   }
 }
