style: intall react-icons & btn action

--- a/src/components/ItemJob.scss
+++ b/src/components/ItemJob.scss
@@ -21,4 +21,14 @@
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
   }
+
+  .henmcposup_btn {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+    .bjvnitqkwa {
+      margin: 0 2px;
+    }
+  }
 }
